--- a/src/Huskui.Gallery/Views/Controls/TagsPage.axaml
+++ b/src/Huskui.Gallery/Views/Controls/TagsPage.axaml
@@ -21,8 +21,8 @@
                     <StackPanel Spacing="12">
                         <TextBlock Text="Tag Styles" FontWeight="Bold" FontSize="14" />
                         <ToggleButton x:Name="SmallSizeToggle" Content="Small Size" />
-                        <ToggleButton x:Name="ClickableToggle" Content="Clickable" />
-                        <TextBlock Text="Toggle size and clickable states to see different tag behaviors."
+                        <ToggleButton x:Name="StatusStyleToggle" Content="Status Style" />
+                        <TextBlock Text="Toggle different tag styles to see visual variations."
                                    TextWrapping="Wrap"
                                    FontSize="12"
                                    Foreground="{StaticResource ControlSecondaryForegroundBrush}" />
@@ -31,11 +31,25 @@
 
                 <StackPanel Spacing="16">
                     <StackPanel Orientation="Horizontal" Spacing="8">
-                        <husk:Tag Content="Default" />
-                        <husk:Tag Content="Primary" Classes="Primary" />
-                        <husk:Tag Content="Success" Classes="Success" />
-                        <husk:Tag Content="Warning" Classes="Warning" />
-                        <husk:Tag Content="Danger" Classes="Danger" />
+                        <husk:Tag Content="Default"
+                                  Classes.Small="{Binding #SmallSizeToggle.IsChecked}"
+                                  Classes.Status="{Binding #StatusStyleToggle.IsChecked}" />
+                        <husk:Tag Content="Primary"
+                                  Classes="Primary"
+                                  Classes.Small="{Binding #SmallSizeToggle.IsChecked}"
+                                  Classes.Status="{Binding #StatusStyleToggle.IsChecked}" />
+                        <husk:Tag Content="Success"
+                                  Classes="Success"
+                                  Classes.Small="{Binding #SmallSizeToggle.IsChecked}"
+                                  Classes.Status="{Binding #StatusStyleToggle.IsChecked}" />
+                        <husk:Tag Content="Warning"
+                                  Classes="Warning"
+                                  Classes.Small="{Binding #SmallSizeToggle.IsChecked}"
+                                  Classes.Status="{Binding #StatusStyleToggle.IsChecked}" />
+                        <husk:Tag Content="Danger"
+                                  Classes="Danger"
+                                  Classes.Small="{Binding #SmallSizeToggle.IsChecked}"
+                                  Classes.Status="{Binding #StatusStyleToggle.IsChecked}" />
                     </StackPanel>
 
                     <StackPanel Spacing="8">
